[gd_scene load_steps=8 format=2]

[ext_resource path="res://coin toss simulation/scenes/simulation.gd" type="Script" id=1]
[ext_resource path="res://coin toss simulation/scenes/coinDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://coin toss simulation/scenes/coin_toss.tscn" type="PackedScene" id=3]
[ext_resource path="res://coin toss simulation/Helvetica 700_WhatsApp.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://packing and conveying/Helvetica 700_WhatsApp.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 4 )

[node name="simulation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_color" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.137255, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0.266667 )
margin_right = 144.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -274.0
margin_top = -58.5
margin_right = -32.0
margin_bottom = 98.5
custom_fonts/font = SubResource( 1 )
text = "Probability of:

HEADS: 0.5
TAILS: 0.5"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="touch" type="Control" parent="."]
margin_left = 506.0
margin_top = -28.0
margin_right = 793.0
margin_bottom = 639.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin_toss" parent="." instance=ExtResource( 3 )]

[node name="coinDisplay" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
